--- a/templates/index_booking.html
+++ b/templates/index_booking.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="/src/main/resources/templates/asses/favicon/Logo_Img.svg"
+      href="/asses/favicon/Logo_Img.svg"
       type="VietHub Airline"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,9 +20,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
     <!-- reset css -->
-    <link rel="stylesheet" href="/src/main/resources/templates/asses/css/reset.css" />
+    <link rel="stylesheet" href="/asses/css/reset.css" />
     <!-- style css -->
-    <link rel="stylesheet" href="/src/main/resources/templates/asses/css/style_booking.css" />
+    <link rel="stylesheet" href="/asses/css/style_booking.css" />
     
     <title>VietHub Airline</title>
   </head>
@@ -34,7 +34,7 @@
         <!-- Logo -->
         <a href=""
           ><img
-            src="/src/main/resources/templates/asses/favicon/Logo_Gr.svg"
+            src="/asses/favicon/Logo_Gr.svg"
             alt="Shine smile"
             class="logo header__logo"
         /></a>
@@ -42,19 +42,22 @@
         <nav class="navbar">
           <ul class="navbar__list" id="navbar__list--pc">
             <li class="navbar__item">
-              <a href="/src/main/resources/templates/index.html" class="navbar__link">Home</a>
+              <a href="/templates/index.html" class="navbar__link">Home</a>
             </li>
             <li class="navbar__item">
-              <a href="/src/main/resources/templates/index_search.html" class="navbar__link">Search</a>
+              <a href="/templates/index_search.html" class="navbar__link">Search</a>
             </li>
             <li class="navbar__item">
-              <a href="/src/main/resources/templates/index_booking.html" class="navbar__link navbar__link--active">Booking</a>
+              <a href="/templates/index_booking.html" class="navbar__link navbar__link--active">Booking</a>
             </li>
             <li class="navbar__item">
-              <a href="/src/main/resources/templates/index.html" class="navbar__link">About</a>
+              <a href="/templates/index.html" class="navbar__link">About</a>
             </li>
             <li class="navbar__item">
-              <a href="/src/main/resources/templates/index.html" class="navbar__link">Contact</a>
+              <a href="/templates/index.html" class="navbar__link">Contact</a>
+            </li>
+            <li class="navbar__item">
+              <a href="/templates/index_adding.html" class="navbar__link">BookTicket</a>
             </li>
           </ul>
         </nav>
@@ -159,7 +162,7 @@
           <div class="add-booking">
             <div class="container">
                 <div class="add-booking__icon">
-                  <img src="/src/main/resources/templates/asses/favicon/phone.svg" width="30" height="24" viewBox="0 0 640 512">
+                  <img src="/asses/favicon/phone.svg" width="30" height="24" viewBox="0 0 640 512">
                 </img>
                   <a class="add__tickets" href="#">Contact info</a>
                 </div>
