--- a/templates/index_adding.html
+++ b/templates/index_adding.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="/src/main/resources/templates/asses/favicon/Logo_Img.svg"
+      href="/asses/favicon/Logo_Img.svg"
       type="VietHub Airline"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,9 +20,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
     <!-- reset css -->
-    <link rel="stylesheet" href="/src/main/resources/templates/asses/css/reset.css" />
+    <link rel="stylesheet" href="/asses/css/reset.css" />
     <!-- style css -->
-    <link rel="stylesheet" href="/src/main/resources/templates/asses/css/style_adding.css" />
+    <link rel="stylesheet" href="/asses/css/style_adding.css" />
     
     <title>VietHub Airline</title>
   </head>
@@ -34,7 +34,7 @@
           <!-- Logo -->
           <a href="./"
             ><img
-              src="/src/main/resources/templates/asses/favicon/Logo_Gr.svg"
+              src="/asses/favicon/Logo_Gr.svg"
               alt="Shine smile"
               class="logo header__logo"
           /></a>
@@ -42,26 +42,29 @@
           <nav class="navbar">
             <ul class="navbar__list" id="navbar__list--pc">
               <li class="navbar__item">
-                <a href="/src/main/resources/templates/index_home.html" class="navbar__link navbar__link--active">Home</a>
+                <a href="/templates/index.html" class="navbar__link">Home</a>
               </li>
               <li class="navbar__item">
-                <a href="/src/main/resources/templates/index_search.html" class="navbar__link">Search</a>
+                <a href="/templates/index_search.html" class="navbar__link">Search</a>
               </li>
               <li class="navbar__item">
-                <a href="/src/main/resources/templates/index_booking.html" class="navbar__link">Booking</a>
+                <a href="/templates/index_booking.html" class="navbar__link">Booking</a>
               </li>
               <li class="navbar__item">
-                <a href="/src/main/resources/templates/index_home.html" class="navbar__link">About</a>
+                <a href="/templates/index.html" class="navbar__link">About</a>
               </li>
               <li class="navbar__item">
-                <a href="/src/main/resources/templates/index_home.html" class="navbar__link">Contact</a>
+                <a href="/templates/index.html" class="navbar__link">Contact</a>
+              </li>
+              <li class="navbar__item">
+                <a href="/templates/index_adding.html" class="navbar__link navbar__link--active" >BookTicket</a>
               </li>
             </ul>
           </nav>
           <!-- cta action -->
           <div class="header__action">
-            <a href="/src/main/resources/templates/index_signin" class="header__action--login">Log in</a>
-            <a href="/src/main/resources/templates/index_signup" class="btn header__action--signup">Sign up</a>
+            <a href="/index_signin" class="header__action--login">Log in</a>
+            <a href="/index_signup" class="btn header__action--signup">Sign up</a>
           </div>
         </div>
     </header>
@@ -69,7 +72,7 @@
     <section class="hero">
         <img
           class="hero__img "
-          src="/src/main/resources/templates/asses/img/plane_0.svg"
+          src="/asses/img/plane_0.svg"
           alt="Plane_0"
         />
         <div class="hero__content">
@@ -156,7 +159,7 @@
                 <div class="add_station">
                     <div class="add_planeStation">
                       <div class="air_plane">
-                          <img class="img_plane" src="/src/main/resources/templates/asses/favicon/airplane.svg"/>
+                          <img class="img_plane" src="/asses/favicon/airplane.svg"/>
                       </div>
   
                       <div class="station_info">
@@ -179,7 +182,7 @@
                 <div class="add_station">
                     <div class="add_planeStation">
                       <div class="air_plane">
-                      <img class="img_plane" src="/src/main/resources/templates/asses/favicon/airplane.svg"/>
+                      <img class="img_plane" src="/asses/favicon/airplane.svg"/>
                   </div>
 
                   <div class="station_info">
