Add Search { js }

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
             Enjoy your trip and receive the personal service you deserve. with world-leading services
           </p>
           <div class="hero__row">
-            <a href="#!" class="btn">Book Online</a>
+            <a href="/templates/index_booking.html" class="btn">Book Online</a>
             <span class="hero__phone">or call (123) 456-789</span>
           </div>
         </div> 
