--- a/templates/index_booking.html
+++ b/templates/index_booking.html
@@ -63,8 +63,8 @@
         </nav>
         <!-- cta action -->
         <div class="header__action">
-          <a href="#!" class="header__action--login">Log in</a>
-          <a href="#!" class="btn header__action--signup">Sign up</a>
+          <a href="/templates/index_signin.html" class="header__action--login">Log in</a>
+          <a href="/templates/index_signup.html" class="btn header__action--signup">Sign up</a>
         </div>
       </div>
     </header>
