--- a/templates/index_signup.html
+++ b/templates/index_signup.html
@@ -26,7 +26,7 @@
     <!-- reset css -->
     <link rel="stylesheet" href="/asses/css/reset.css" />
     <!-- style css -->
-    <link rel="stylesheet" href="/asses/css/sign.css" />
+    <link rel="stylesheet" href="/asses/css/style_sign.css" />
 
     <title>VietHub Airline</title>
   </head>
@@ -45,27 +45,27 @@
         <nav class="navbar">
           <ul class="navbar__list" id="navbar__list--pc">
             <li class="navbar__item">
-              <a href="/index_home.html" class="navbar__link">Home</a>
+              <a href="/templates/index.html" class="navbar__link">Home</a>
             </li>
             <li class="navbar__item">
-              <a href="index_search.html" class="navbar__link navbar">Search</a>
+              <a href="/templates/index_search.html" class="navbar__link navbar">Search</a>
             </li>
             <li class="navbar__item">
-              <a href="/index_booking.html" class="navbar__link">Booking</a>
+              <a href="/templates/index_booking.html" class="navbar__link">Booking</a>
             </li>
             <li class="navbar__item">
-              <a href="/index_home.html" class="navbar__link">About</a>
+              <a href="/templates/index.html" class="navbar__link">About</a>
             </li>
             <li class="navbar__item">
-              <a href="/index_home.html" class="navbar__link">Contact</a>
+              <a href="/templates/index.html" class="navbar__link">Contact</a>
             </li>
           </ul>
         </nav>
         <!-- cta action -->
         <div class="header__action">
-            <a href="/index_signin.html" class="header__action--login">Sign in</a>
-            <a href="/index_signup.html" class="btn header__action--signup">Sign up</a>
-          </div>
+          <a href="/templates/index_signin.html" class="header__action--login">Log in</a>
+          <a href="/templates/index_signup.html" class="btn header__action--signup">Sign up</a>
+        </div>
       </div>
     </header>
     <!-- sign up form -->
