--- a/templates/index_adding.html
+++ b/templates/index_adding.html
@@ -149,7 +149,7 @@
                     <div class="inter_title">Intermediate Stations</div>
 
                     <div class="btn_sign">
-                      <button id="add_station" class="btn_add_sign" onclick="ShowDialog()">
+                      <button id="add_station" class="btn_add_sign" onclick="ShowDialog()" >
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="29" viewBox="0 0 448 512">
                         <path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" fill="currentColor"/></svg>
                       </button>
@@ -250,7 +250,7 @@
           
           
           <div class="btn_center">
-            <button class="btn_confirm_add">Confirm</button>
+            <button type="submit" class="btn_confirm_add">Confirm</button>
         </div> 
 
         </form>
