Connect all link staff { html, css }

--- a/templates/index_adding_staff.html
+++ b/templates/index_adding_staff.html
@@ -22,7 +22,7 @@
     <!-- reset css -->
     <link rel="stylesheet" href="/asses/css/reset.css" />
     <!-- style css -->
-    <link rel="stylesheet" href="/asses/css/style_adding.css" />
+    <link rel="stylesheet" href="/asses/css/style_adding_staff.css" />
     
     <title>VietHub Airline</title>
   </head>
@@ -42,22 +42,19 @@
           <nav class="navbar">
             <ul class="navbar__list" id="navbar__list--pc">
               <li class="navbar__item">
-                <a href="/templates/index.html" class="navbar__link">Home</a>
+                <a href="/templates/index_staff.html" class="navbar__link ">Home</a>
               </li>
               <li class="navbar__item">
-                <a href="/templates/index_search.html" class="navbar__link">Search</a>
+                <a href="/templates/index_search_staff.html" class="navbar__link">Search</a>
               </li>
               <li class="navbar__item">
-                <a href="/templates/index_booking.html" class="navbar__link">Booking</a>
+                <a href="/templates/index_adding_staff.html" class="navbar__link navbar__link--active">Add Flight</a>
               </li>
               <li class="navbar__item">
-                <a href="/templates/index.html" class="navbar__link">About</a>
+                <a href="/templates/index_report_staff.html" class="navbar__link">Report</a>
               </li>
               <li class="navbar__item">
-                <a href="/templates/index.html" class="navbar__link">Contact</a>
-              </li>
-              <li class="navbar__item">
-                <a href="/templates/index_adding.html" class="navbar__link navbar__link--active" >BookTicket</a>
+                <a href="/templates/index_regulations_staff.html" class="navbar__link">Regulations</a>
               </li>
             </ul>
           </nav>
