t thêm cái forgot cái password ó nha

--- a/templates/index_re-password.html
+++ b/templates/index_re-password.html
@@ -26,7 +26,7 @@
     <!-- reset css -->
     <link rel="stylesheet" href="/asses/css/reset.css" />
     <!-- style css -->
-    <link rel="stylesheet" href="/asses/css/style_sign.css" />
+    <link rel="stylesheet" href="/asses/css/re-password.css" />
 
     <title>VietHub Airline</title>
   </head>
@@ -48,7 +48,7 @@
               <a href="/templates/index.html" class="navbar__link">Home</a>
             </li>
             <li class="navbar__item">
-              <a href="/templates/index_search.html" class="navbar__link"
+              <a href="/templates/index_search.html" class="navbar__link navbar"
                 >Search</a
               >
             </li>
@@ -67,67 +67,40 @@
         </nav>
         <!-- cta action -->
         <div class="header__action">
-          <a
-            href="/templates/index_signin.html"
-            class="btn header__action--login"
+          <a href="/templates/index_signin.html" class="header__action--login"
             >Log in</a
           >
-          <a href="/templates/index_signup.html" class="header__action--signup"
+          <a
+            href="/templates/index_signup.html"
+            class="btn header__action--signup"
             >Sign up</a
           >
         </div>
       </div>
     </header>
-
-    <!-- sign in form -->
     <section class="container forms">
-      <!-- Sign in Form -->
-      <div class="form Sign in">
+      <!-- Forgot pass Form -->
+      <div class="form Forgot Password">
         <div class="form-content">
-          <header>Log in</header>
+          <header>Forgot Password</header>
           <form action="#">
             <div class="field input-field">
               <input
                 type="text"
                 id="email"
-                placeholder="User name or Email address"
+                placeholder="Email address"
                 class="input"
                 required
               />
             </div>
 
-            <div class="field input-field">
-              <input
-                type="password"
-                placeholder="Password"
-                class="password"
-                required
-              />
-              <i class="bx bx-hide eye-icon"></i>
-            </div>
-
-            <div class="form-link">
-              <a href="/templates/index_re-password.html" class="forgot-pass"
-                >Forgot password?</a
-              >
-            </div>
-
             <div class="field button-field">
-              <button>Log in</button>
+              <button>Reset Password</button>
             </div>
           </form>
-
-          <div class="form-link">
-            <span
-              >Don't have an account?
-              <a href="/templates/index_signup.html" class="link signup-link"
-                >Sign up</a
-              ></span
-            >
-          </div>
         </div>
       </div>
     </section>
-    <script src="/asses/js/signin.js"></script>
+    <script src="/asses/js/re-password.js" script>
   </body>
 </html>
