--- a/templates/index_signup.html
+++ b/templates/index_signup.html
@@ -48,10 +48,14 @@
               <a href="/templates/index.html" class="navbar__link">Home</a>
             </li>
             <li class="navbar__item">
-              <a href="/templates/index_search.html" class="navbar__link navbar">Search</a>
+              <a href="/templates/index_search.html" class="navbar__link navbar"
+                >Search</a
+              >
             </li>
             <li class="navbar__item">
-              <a href="/templates/index_booking.html" class="navbar__link">Booking</a>
+              <a href="/templates/index_booking.html" class="navbar__link"
+                >Booking</a
+              >
             </li>
             <li class="navbar__item">
               <a href="/templates/index.html" class="navbar__link">About</a>
@@ -63,8 +67,14 @@
         </nav>
         <!-- cta action -->
         <div class="header__action">
-          <a href="/templates/index_signin.html" class="header__action--login">Log in</a>
-          <a href="/templates/index_signup.html" class="btn header__action--signup">Sign up</a>
+          <a href="/templates/index_signin.html" class="header__action--login"
+            >Log in</a
+          >
+          <a
+            href="/templates/index_signup.html"
+            class="btn header__action--signup"
+            >Sign up</a
+          >
         </div>
       </div>
     </header>
@@ -76,7 +86,12 @@
           <header>Sign up</header>
           <form action="#">
             <div class="field input-field">
-              <input type="text" placeholder="Full name" class="input" />
+              <input
+                type="text"
+                placeholder="Full name"
+                class="input"
+                required
+              />
             </div>
 
             <div class="field input-field">
@@ -85,10 +100,16 @@
                 id="email"
                 placeholder="Email address"
                 class="input"
+                required
               />
             </div>
             <div class="field input-field">
-              <input type="text" placeholder="User ID" class="input" />
+              <input
+                type="text"
+                placeholder="User name"
+                class="input"
+                required
+              />
             </div>
 
             <div class="field input-field">
@@ -96,6 +117,7 @@
                 type="password"
                 placeholder="Create password"
                 class="password"
+                required
               />
             </div>
 
@@ -104,6 +126,7 @@
                 type="password"
                 placeholder="Confirm password"
                 class="password"
+                required
               />
               <i class="bx bx-hide eye-icon"></i>
             </div>
@@ -116,11 +139,14 @@
           <div class="form-link">
             <span
               >Don't have an account?
-              <a href="/index_signin.html" class="link signin-link">Sign in</a></span
+              <a href="/templates/index_signin.html" class="link signin-link"
+                >Log in</a
+              ></span
             >
           </div>
         </div>
       </div>
     </section>
+    <script src="/asses/js/signup.js"></script>
   </body>
 </html>
