--- a/asses/css/style_planes_staff.css
+++ b/asses/css/style_planes_staff.css
@@ -1,75 +1,89 @@
 * {
     box-sizing: border-box;
-  }
-  html {
+}
+
+html {
     font-size: 62.5%;
-  }
-  body {
+}
+
+body {
     font-size: 1.6rem;
     font-family: "Sora", sans-serif;
-  }
-  :root {
+}
+
+ :root {
     --font-heading: "Sora";
     --font-content: "Open Sans";
     --primary-color: #21A9DE;
     --header-bg: #00256C;
     --partners-bg: #F6FBFF;
-  }
-  
-  /* ========== common ========== */
-  /* se co nhung the khong an theo thuoc tinh chung */
-  input,
-  textarea,
-  select,
-  button {
+}
+
+
+/* ========== common ========== */
+
+
+/* se co nhung the khong an theo thuoc tinh chung */
+
+input,
+textarea,
+select,
+button {
     font-family: inherit;
     font-size: inherit;
-  }
-  .container {
+}
+
+.container {
     width: 1170px;
     margin: 0 auto;
     max-width: calc(100% - 48px);
-  }
-  a {
+}
+
+a {
     text-decoration: none;
-  }
-  .btn {
+}
+
+.btn {
     /* box chua */
     display: inline-block;
     min-width: 205px;
     line-height: 60px;
     border-radius: 30px;
     background: var(--primary-color);
-  
     /* text */
     text-align: center;
     color: #fff;
     font-size: 18px;
     font-weight: 400;
-  }
-  .btn:hover {
+}
+
+.btn:hover {
     /* Lam mo nen */
     opacity: 0.9;
-  }
-  .section-heading {
+}
+
+.section-heading {
     color: var(--header-bg);
     font-size: 5rem;
     font-weight: 600;
     line-height: 1.2;
     letter-spacing: -1px;
-  }
-  .section-desc {
+}
+
+.section-desc {
     color: #575f66;
     font-size: 1.8rem;
     font-weight: 300;
     line-height: 1.67;
-  }
-  .control {
+}
+
+.control {
     display: flex;
     column-gap: 18px;
     align-items: center;
-  }
-  .control__btn {
+}
+
+.control__btn {
     width: 36px;
     height: 36px;
     border-radius: 50%;
@@ -80,22 +94,27 @@
     background: #fff;
     cursor: pointer;
     transition: 0.25s;
-  }
-  .control__btn:hover {
+}
+
+.control__btn:hover {
     background: var(--primary-color);
     border-color: var(--primary-color);
     color: #fff;
-  }
-  .control__btn--next {
+}
+
+.control__btn--next {
     rotate: 180deg;
-  }
-  
-  /* ========== header ========== */
-  .header {
+}
+
+
+/* ========== header ========== */
+
+.header {
     background: var(--header-bg);
     min-width: 100vw;
-  }
-  .menu {
+}
+
+.menu {
     padding: 10px;
     width: 1400px;
     margin: 0 auto;
@@ -103,142 +122,240 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-  }
-  .navbar__list {
+}
+
+.navbar__list {
     display: flex;
-  }
-  .header__action--login,
-  .navbar__link {
+}
+
+.header__action--login,
+.navbar__link {
     padding: 8px 21px;
     color: #c9d2da;
     font-size: 1.6rem;
     font-weight: 300;
     line-height: 1.75;
-  }
-  .navbar__link:hover,
-  .navbar__link--active {
+}
+
+.navbar__link:hover,
+.navbar__link--active {
     color: #fff;
     /* font-weight: 400; -> ko dung vi no se day cac ptu khi weight thay doi */
     text-shadow: 1px 0 0 currentColor;
     line-height: 1.75;
-  }
-  .header__action--signup {
+}
+
+.header__action--signup {
     min-width: 104px;
     line-height: 44px;
     font-size: 1.6rem;
-  }
-  .header__action--login {
+}
+
+.header__action--login {
     margin-right: 7px;
-  }
-  
-  /* ========== main ========== */
-  
-  
+}
+
+
+/* ========== main ========== */
+
+
 /* ===== hero ===== */
+
 .hero__heading {
-  color: #FFF;
-  text-align: center;
-  font-size: 7rem;
-  font-weight: 600;
-  line-height: 1.14;
-  letter-spacing: -1.4px;
+    color: #FFF;
+    text-align: center;
+    font-size: 7rem;
+    font-weight: 600;
+    line-height: 1.14;
+    letter-spacing: -1.4px;
 }
+
 .hero__desc {
-  margin-top: 30px;
-  color: #c9d2da;
-  font-size: 1.8rem;
-  font-weight: 400;
-  line-height: 1.67;
-  width:  458px;
-  text-align: center;
+    margin-top: 30px;
+    color: #c9d2da;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.67;
+    width: 458px;
+    text-align: center;
 }
+
 .hero__row {
-  margin-top: 40px;
-  display: flex;
-  align-items: center;
-  column-gap: 40px;
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    column-gap: 40px;
 }
+
 .hero__phone {
-  color: #fff;
-  font-size: 1.8rem;
-  font-weight: 400;
-  line-height: 1.67;
+    color: #fff;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.67;
 }
-.hero{
-  display: flex;
-  position: relative;
+
+.hero {
+    display: flex;
+    position: relative;
 }
+
 .hero__content {
-  margin: 130px 320px;
-  width: 57.1%;
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; 
-  align-items: center;
-  text-align: center; 
+    margin: 130px 320px;
+    width: 57.1%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
+
 .hero__img {
-  min-width: 100vw;
-  object-fit: cover;
+    min-width: 100vw;
+    object-fit: cover;
 }
 
 
 /* ===== how  ===== */
+
 .book {
-  padding: 100px 0;
-  background: #f6fbff;
+    padding: 100px 0;
+    background: #f6fbff;
 }
+
 .book__desc {
-  padding-top: 18px;
-  width: 40%;
+    padding-top: 18px;
+    width: 40%;
 }
+
 .book__list {
-  margin-top: 86px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 30px;
-  align-items: center;
-  justify-content: space-between;
+    margin-top: 86px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 30px;
+    align-items: center;
+    justify-content: space-between;
 }
+
 .book-item {
- 
-  padding: 40px;
-  border: 16px solid #eaf6ff;
-  border-radius: 4px;
-  background: #fff;
-  /* hieu ung */
-  transition: 0.25s;
+    padding: 40px;
+    border: 16px solid #eaf6ff;
+    border-radius: 4px;
+    background: #fff;
+    /* hieu ung */
+    transition: 0.25s;
 }
+
 .book-item:hover {
-  border-color: var(--primary-color);
-  transition: 0.25s;
-  transform: translateY(-16px);
+    border-color: var(--primary-color);
+    transition: 0.25s;
+    transform: translateY(-16px);
 }
+
 .book-tiem__icon {
-  width: 72px;
-  height: 72px;
+    width: 72px;
+    height: 72px;
 }
+
 .book-item__heading {
-  margin-top: 18px;
-  color: #10375c;
-  font-size: 2.6rem;
-  font-weight: 600;
-  line-height: 1.39;
+    margin-top: 18px;
+    color: #10375c;
+    font-size: 2.6rem;
+    font-weight: 600;
+    line-height: 1.39;
 }
+
 .book-item__desc {
-  min-height: 120px;
-  margin-top: 28px;
-  color: #575f66;
-  font-size: 1.6rem;
-  font-weight: 300;
-  line-height: 1.75;
+    min-height: 120px;
+    margin-top: 28px;
+    color: #575f66;
+    font-size: 1.6rem;
+    font-weight: 300;
+    line-height: 1.75;
 }
+
 .book-item__link {
-  margin: 18px 0 auto;
-  display: inline-block;
-  color: #2e80ce;
-  font-size: 1.6rem;
-  font-weight: 400;
-  line-height: 1.75;
+    margin: 18px 0 auto;
+    display: inline-block;
+    color: #2e80ce;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.75;
+}
+
+.btn_bar {
+    background-color: #00256C;
+    width: calc(100% / 6 - 50px);
+    height: 50px;
+    color: #FFF;
+    border-radius: 20px;
+    border-color: #00256C;
+}
+
+.btn_bar:hover {
+    /* Lam mo nen */
+    opacity: 0.9;
+}
+
+.btn_bar:focus {
+    /* Lam mo nen */
+    background-color: #f7f7f7;
+    color: #00256C;
+}
+
+.input {
+    margin: 10px;
+    padding: 10px;
+    width: 300px;
+    border-radius: 10px;
+    color: #00256C;
+    border-color: #00256C;
+}
+
+.container_bar {
+    margin: 20px 0 auto;
+    width: 1350px;
+    display: flex;
+    padding: 20px;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.container_bar_img {}
+
+h1 {
+    padding: 30px;
+    color: #00256C;
+    font-size: 45px;
+    font-weight: bold
+}
+
+table {
+    margin: 60px;
+    width: 85%;
+}
+
+th {
+    background-color: #a0d1ff;
+}
+
+table,
+th,
+td {
+    border: 1px solid #00256C;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+th,
+td {
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    padding-right: 40px;
+}
+
+tr:hover {
+    background-color: rgb(193, 231, 234);
 }
