--- a/templates/index_planes_staff.html
+++ b/templates/index_planes_staff.html
@@ -22,9 +22,7 @@
     <!-- reset css -->
     <link rel="stylesheet" href="/asses/css/reset.css"/>
     <!-- style css -->
-    <link rel="stylesheet" href="/asses/css/style_planes_staff.css" />
-    <link rel="stylesheet" href="/asses/js/staff_plan.js"/>
-    
+    <link rel="stylesheet" href="/asses/css/style_planes_staff.css" />    
     <title>VietHub Airline</title>
   </head>
   <body>
@@ -82,37 +80,201 @@
         </div> 
       </section>
 
+      <!-- bat dau sua, phan chua cac thanh-->
 
+      <h1>Planes</h1>
       <div class="container_bar">
         <div class="container_bar_search_input">
-          <svg class="container_bar_img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="35"  fill="#00256C" ><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
-          <input class="input" type="type" placeholder="Search plane ID ..." />
+          <svg class="container_bar_img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="40" height="35"  fill="#00256C" ><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
+          <input class="input" type="text" placeholder="Search plane ID ..." />
         </div>
 
 
         <button id="btnSearch" class="btn_bar">Search</button>
+
         <button id="btnAdd" class="btn_bar">Add</button>
+        
+        <dialog id="dialog_add">
+          <div class ="wrapper">
+            <form>
+              <div class= "field_add_station"> 
+                <label class="label_station">Plane ID:</label>
+                <input required class="input_station" type="text" placeholder="Enter Plane ID">
+                <label class="label_station">Plane Name:</label>
+                <input required id='duration_dialog' class="input_station" type="text" placeholder="Enter Plane Name" >
+                <label class="label_station">Manufacture ID:</label>
+                <input required id='note_dialog' class="input_station" type="text" placeholder="Enter Manufacture ID">
+                <button id="confirmAdd" class="btn_station"  >Add</button>
+                <button id="cancelAdd" class="btn_station">Cancel</button>
+            </div>
+          </form>
+          </div>
+        </dialog>
+
         <button id="btnUpdate" class="btn_bar">Update</button>
+
+        <dialog id='dialog_update'>
+          <div class ="wrapper">
+            <form>
+              <div class= "field_add_station"> 
+                <label class="label_station">Plane ID:</label>
+                <input required class="input_station" type="text" placeholder="Enter Plane ID">
+                <label class="label_station">Plane Name:</label>
+                <input required id='duration_dialog' class="input_station" type="number" placeholder="Enter Plane Name" >
+                <label class="label_station"> Manufacture ID:</label>
+                <input required id='note_dialog' class="input_station" type="text" placeholder="Enter Manufacture ID">
+               <button id="confirmUpdate" class="btn_station">Update</button>
+              <button id="cancelUpdate" class="btn_station">Cancel</button>
+            </div>
+          </form>
+          </div>
+        </dialog>
+
         <button id="btnRemove" class="btn_bar">Remove</button>
-        </div>
 
-        <h1>Planes</h1>
+        <dialog id='dialog_remove'>
+          <div class ="wrapper">
+            <form>
+              <div class= "field_add_station"> 
+                <label class="label_station">Plane ID:</label>
+                <input required class="input_staion" type="text" placeholder="Enter Plane ID">
+                <button id="confirmRemove" class="btn_station">Remove</button>
+                <button id="cancelRemove" class="btn_station">Cancel</button>
+            </div>
+          </form>
+          </div>
+        </dialog>
 
-        <table class="table">
-          <tr>
-            <th>Plane ID</th>
-            <th>Plane Name</th>
-            <th>Manufacture ID</th>
-          </tr>
+      </div>
 
-          <tr>
-            <td>1</td>
-            <td>Anh</td>
-            <td>10</td>
-          </tr>
-        </table>
-      
+        
+      <!-- Taoj bang-->
+        <table id="table_planes" class="table">
+          <div class="table_title">
+            <tr>
+              <th>Plane ID</th>
+              <th>Plane Name</th>
+              <th>Manufacture ID</th>
+            </tr>
+          </div>
+          <div class="table_row">
+            <tr>
+              <td>1</td>
+              <td>Anh</td>
+              <td>10</td>
+            </tr>
+          </div>
 
+          <div class="table_row">
+            <tr>
+              <td>2</td>
+              <td>M34</td>
+              <td>10</td>
+            </tr>
+          </div>
+
+      </table>
+      <!--Het-->
+
+<!--Gio den danh sach cac tram may bay-->
+
+<h1>Stations</h1>
+<div class="container_bar">
+  <div class="container_bar_search_input">
+    <svg class="container_bar_img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="40" height="35"  fill="#00256C" ><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
+    <input class="input" type="text" placeholder="Search station ID ..." />
+  </div>
+
+
+  <button id="btnSearchStations" class="btn_bar">Search</button>
+
+  <button id="btnAddStations" class="btn_bar">Add</button>
+  
+  <dialog id="dialog_add_stations">
+    <div class ="wrapper">
+      <form>
+        <div class= "field_add_station"> 
+          <label class="label_station">Station ID:</label>
+          <input required class="input_station" type="text" placeholder="Enter Station ID">
+          <label class="label_station">Station Name:</label>
+          <input required class="input_station" type="text" placeholder="Enter Station Name" >
+          <label class="label_station">Address:</label>
+          <input required class="input_station" type="text" placeholder="Enter Station Adress">
+          <button id="confirmAddStations" class="btn_station"  >Add</button>
+          <button id="cancelAddStations" class="btn_station">Cancel</button>
+      </div>
+    </form>
+    </div>
+  </dialog>
+
+  <button id="btnUpdateStations" class="btn_bar">Update</button>
+
+  <dialog id='dialog_update_stations'>
+    <div class ="wrapper">
+      <form>
+        <div class= "field_add_station"> 
+          <label class="label_station">Staion ID:</label>
+          <input required class="input_station" type="text" placeholder="Enter Station ID">
+          <label class="label_station">Station Name:</label>
+          <input required  class="input_station" type="number" placeholder="Enter Station Name" >
+          <label class="label_station">Address:</label>
+          <input required  class="input_station" type="text" placeholder="Enter Station Adress">
+         <button id="confirmUpdateStations" class="btn_station">Update</button>
+        <button id="cancelUpdateStations" class="btn_station">Cancel</button>
+      </div>
+    </form>
+    </div>
+  </dialog>
+
+  <button id="btnRemoveStations" class="btn_bar">Remove</button>
+
+  <dialog id='dialog_remove_stations'>
+    <div class ="wrapper">
+      <form>
+        <div class= "field_add_station"> 
+          <label class="label_station">Station ID:</label>
+          <input required class="input_staion" type="text" placeholder="Enter Station ID">
+          <button id="confirmRemoveStations" class="btn_station">Remove</button>
+          <button id="cancelRemoveStations" class="btn_station">Cancel</button>
+
+      </div>
+    </form>
+    </div>
+  </dialog>
+
+</div>
+
+  
+<!-- Taoj bang-->
+  <table id="table_stations" class="table">
+    <div class="table_title">
+      <tr>
+        <th>Station ID</th>
+        <th>Station Name</th>
+        <th>Address</th>
+      </tr>
+    </div>
+    <div class="table_row">
+      <tr>
+        <td>1</td>
+        <td>Anh</td>
+        <td>VietNam</td>
+      </tr>
+    </div>
+
+    <div class="table_row">
+      <tr>
+        <td>2</td>
+        <td>M34</td>
+        <td>Korea</td>
+      </tr>
+    </div>
+
+</table>
+  
+   </main>
+   <!--Phan java script-->
+   <script src="/asses/js/staff_plan.js"></script>
 </body>
 </html>
     
